fix: grid-gaps

--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -3,7 +3,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-height: inherit;
   background: url(../../../images/cover/cover-trains.jpg) no-repeat center;
   background-size: cover;
   min-height: 62.5vw;
