--- a/blocks/places/__grid-text/places__grid-text.css
+++ b/blocks/places/__grid-text/places__grid-text.css
@@ -1,6 +1,6 @@
 .places__grid-text {
   display: grid;
-  grid-template-rows: repeat(2, min-content);
+  grid-template-rows: min-content;
   grid-template-columns: minmax(min-content, max-content);
   gap: 26px;
   font-weight: normal;
